manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssh
spec:
  type: NodePort
  ports:
  - port: 22
    targetPort: 22
  selector:
    app: ubuntu
