manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ssh
spec:
  podSelector:
    matchLabels:
      app: ubuntu
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 22
